--- a/TrainTest.ipynb
+++ b/TrainTest.ipynb
@@ -225,7 +225,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(r\"C:\\Users\\piatt\\OneDrive\\Documents\\GitHub\\Diabetes_projection\\diabetes.csv\")\n",
+    "df = pd.read_csv(r\"diabetes.csv\")\n",
     "df"
    ]
   },
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
        "LogisticRegression(random_state=42)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
