--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -828,6 +828,24 @@
     "plt.title(\"Decision Tree from Random Forest\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction = regressor.predict([[1, 80, 80, 22, 10, 27.8, 0.442, 26]])\n",
+    "print(prediction)"
+   ]
   }
  ],
  "metadata": {
