add data check and fix in MR
add null check, for 0 in the data that impossible, i use mean to replace it.

fix "fit_transform" in multi regression

--- a/Multivariable Regression.ipynb
+++ b/Multivariable Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "374fe0f7-3653-42eb-a6e2-214e9c4f4d5c",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "502e1e1e",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        "[768 rows x 9 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,260 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "39f2371f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pregnancies                 0\n",
+      "Glucose                     0\n",
+      "BloodPressure               0\n",
+      "SkinThickness               0\n",
+      "Insulin                     0\n",
+      "BMI                         0\n",
+      "DiabetesPedigreeFunction    0\n",
+      "Age                         0\n",
+      "Outcome                     0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test Null in the dataset\n",
+    "null_counts = df.isnull().sum()\n",
+    "print(null_counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6d98eeb",
+   "metadata": {},
+   "source": [
+    "Based on data description from Kaggle: \\\n",
+    "Pregnancies: To express the Number of pregnancies,\n",
+    "Glucose: To express the Glucose level in blood,\n",
+    "BloodPressure: To express the Blood pressure measurement,\n",
+    "SkinThickness: To express the thickness of the skin,\n",
+    "Insulin: To express the Insulin level in blood,\n",
+    "BMI: To express the Body mass index,\n",
+    "DiabetesPedigreeFunction: To express the Diabetes percentage,\n",
+    "Age: To express the age,\n",
+    "Outcome: To express the final result 1 is Yes and 0 is No.\n",
+    "\n",
+    "It is impossible to be zero Glucose, BloodPressure, SkinThickness, Insulin, BMI, DiabetesPedigreeFunction and Age. So I start with checking 0 in the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a8a3cac4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 768 entries, 0 to 767\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column                    Non-Null Count  Dtype  \n",
+      "---  ------                    --------------  -----  \n",
+      " 0   Pregnancies               768 non-null    int64  \n",
+      " 1   Glucose                   768 non-null    int64  \n",
+      " 2   BloodPressure             768 non-null    int64  \n",
+      " 3   SkinThickness             768 non-null    int64  \n",
+      " 4   Insulin                   768 non-null    int64  \n",
+      " 5   BMI                       768 non-null    float64\n",
+      " 6   DiabetesPedigreeFunction  768 non-null    float64\n",
+      " 7   Age                       768 non-null    int64  \n",
+      " 8   Outcome                   768 non-null    int64  \n",
+      "dtypes: float64(2), int64(7)\n",
+      "memory usage: 54.1 KB\n",
+      "Number of Pregnancies: 111\n",
+      "Number of Glucose: 5\n",
+      "Number of BloodPressure: 35\n",
+      "Number of SkinThickness: 227\n",
+      "Number of Insulin: 374\n",
+      "Number of BMI: 11\n",
+      "Number of DiabetesPedigreeFunction: 0\n",
+      "Number of Age: 0\n",
+      "Number of Outcome: 500\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()\n",
+    "for column in df:\n",
+    "    zero_count = (df[column] == 0).sum()\n",
+    "    print(f\"Number of {column}: {zero_count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6c82cc89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Glucose: 120.89\n",
+      "Number of zero values before replacement: 5\n",
+      "Number of zero values after replacement: 0\n",
+      "count    768.000000\n",
+      "mean     121.681605\n",
+      "std       30.436016\n",
+      "min       44.000000\n",
+      "25%       99.750000\n",
+      "50%      117.000000\n",
+      "75%      140.250000\n",
+      "max      199.000000\n",
+      "Name: Glucose, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "ST_mean = df[\"Glucose\"].mean()\n",
+    "print(f\"Mean Glucose: {ST_mean:.2f}\")\n",
+    "\n",
+    "zero_count = (df[\"Glucose\"] == 0).sum()\n",
+    "print(f\"Number of zero values before replacement: {zero_count}\")\n",
+    "\n",
+    "df[\"Glucose\"] = df[\"Glucose\"].replace(0, ST_mean)\n",
+    "\n",
+    "zero_count_after = (df[\"Glucose\"] == 0).sum()\n",
+    "print(f\"Number of zero values after replacement: {zero_count_after}\")\n",
+    "\n",
+    "print(df[\"Glucose\"].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c6b58839",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean BloodPressure: 69.11\n",
+      "Number of zero values before replacement: 35\n",
+      "Number of zero values after replacement: 0\n",
+      "count    768.000000\n",
+      "mean      72.254807\n",
+      "std       12.115932\n",
+      "min       24.000000\n",
+      "25%       64.000000\n",
+      "50%       72.000000\n",
+      "75%       80.000000\n",
+      "max      122.000000\n",
+      "Name: BloodPressure, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "ST_mean = df[\"BloodPressure\"].mean()\n",
+    "print(f\"Mean BloodPressure: {ST_mean:.2f}\")\n",
+    "\n",
+    "zero_count = (df[\"BloodPressure\"] == 0).sum()\n",
+    "print(f\"Number of zero values before replacement: {zero_count}\")\n",
+    "\n",
+    "df[\"BloodPressure\"] = df[\"BloodPressure\"].replace(0, ST_mean)\n",
+    "\n",
+    "zero_count_after = (df[\"BloodPressure\"] == 0).sum()\n",
+    "print(f\"Number of zero values after replacement: {zero_count_after}\")\n",
+    "\n",
+    "print(df[\"BloodPressure\"].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ff59165b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Insulin: 79.80\n",
+      "Number of zero values before replacement: 374\n",
+      "Number of zero values after replacement: 0\n",
+      "count    768.000000\n",
+      "mean     118.660163\n",
+      "std       93.080358\n",
+      "min       14.000000\n",
+      "25%       79.799479\n",
+      "50%       79.799479\n",
+      "75%      127.250000\n",
+      "max      846.000000\n",
+      "Name: Insulin, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "ST_mean = df[\"Insulin\"].mean()\n",
+    "print(f\"Mean Insulin: {ST_mean:.2f}\")\n",
+    "\n",
+    "zero_count = (df[\"Insulin\"] == 0).sum()\n",
+    "print(f\"Number of zero values before replacement: {zero_count}\")\n",
+    "\n",
+    "df[\"Insulin\"] = df[\"Insulin\"].replace(0, ST_mean)\n",
+    "\n",
+    "zero_count_after = (df[\"Insulin\"] == 0).sum()\n",
+    "print(f\"Number of zero values after replacement: {zero_count_after}\")\n",
+    "\n",
+    "print(df[\"Insulin\"].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
+   "id": "d3423b7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean BMI: 31.99\n",
+      "Number of zero values before replacement: 11\n",
+      "Number of zero values after replacement: 0\n",
+      "count    768.000000\n",
+      "mean      32.450805\n",
+      "std        6.875374\n",
+      "min       18.200000\n",
+      "25%       27.500000\n",
+      "50%       32.000000\n",
+      "75%       36.600000\n",
+      "max       67.100000\n",
+      "Name: BMI, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "ST_mean = df[\"BMI\"].mean()\n",
+    "print(f\"Mean BMI: {ST_mean:.2f}\")\n",
+    "\n",
+    "zero_count = (df[\"BMI\"] == 0).sum()\n",
+    "print(f\"Number of zero values before replacement: {zero_count}\")\n",
+    "\n",
+    "df[\"BMI\"] = df[\"BMI\"].replace(0, ST_mean)\n",
+    "\n",
+    "zero_count_after = (df[\"BMI\"] == 0).sum()\n",
+    "print(f\"Number of zero values after replacement: {zero_count_after}\")\n",
+    "\n",
+    "print(df[\"BMI\"].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "221a6986",
    "metadata": {},
    "outputs": [
@@ -239,18 +492,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.63994726  0.84832379  0.14964075 ...  0.20401277  0.46849198\n",
+      "[[ 0.63994726  0.86527574 -0.0210444  ...  0.16725546  0.46849198\n",
       "   1.4259954 ]\n",
-      " [-0.84488505 -1.12339636 -0.16054575 ... -0.68442195 -0.36506078\n",
+      " [-0.84488505 -1.20598931 -0.51658286 ... -0.85153454 -0.36506078\n",
       "  -0.19067191]\n",
-      " [ 1.23388019  1.94372388 -0.26394125 ... -1.10325546  0.60439732\n",
+      " [ 1.23388019  2.01597855 -0.68176235 ... -1.33182125  0.60439732\n",
       "  -0.10558415]\n",
       " ...\n",
-      " [ 0.3429808   0.00330087  0.14964075 ... -0.73518964 -0.68519336\n",
+      " [ 0.3429808  -0.02240928 -0.0210444  ... -0.90975111 -0.68519336\n",
       "  -0.27575966]\n",
-      " [-0.84488505  0.1597866  -0.47073225 ... -0.24020459 -0.37110101\n",
+      " [-0.84488505  0.14197684 -1.01212132 ... -0.34213954 -0.37110101\n",
       "   1.17073215]\n",
-      " [-0.84488505 -0.8730192   0.04624525 ... -0.20212881 -0.47378505\n",
+      " [-0.84488505 -0.94297153 -0.18622389 ... -0.29847711 -0.47378505\n",
       "  -0.87137393]]\n"
      ]
     }
@@ -264,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "40719d9a",
    "metadata": {},
    "outputs": [
@@ -681,7 +934,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "6df6649f",
    "metadata": {},
    "outputs": [
@@ -701,7 +954,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.04321753]\n"
+      "[-0.06862558]\n"
      ]
     },
     {
@@ -720,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "1e209f21",
    "metadata": {},
    "outputs": [
@@ -1137,7 +1390,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,26 +1402,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "5457864a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "scaled = scale.transform([[1, 80, 80, 22, 10, 27.8, 0.442, 26]])"
+    "scaled = scale.fit_transform([[1, 80, 80, 22, 10, 27.8, 0.442, 26]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "610c95e9",
    "metadata": {},
    "outputs": [
@@ -1176,7 +1420,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.04321753]\n"
+      "[0.34895833]\n"
      ]
     }
    ],
