--- a/TrainTest.ipynb
+++ b/TrainTest.ipynb
@@ -238,18 +238,303 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     Pregnancies  Glucose  BloodPressure  SkinThickness  Insulin   BMI  \\\n",
-      "0              6      148             72             35        0  33.6   \n",
-      "1              1       85             66             29        0  26.6   \n",
-      "2              8      183             64              0        0  23.3   \n",
-      "3              1       89             66             23       94  28.1   \n",
-      "4              0      137             40             35      168  43.1   \n",
-      "..           ...      ...            ...            ...      ...   ...   \n",
-      "763           10      101             76             48      180  32.9   \n",
-      "764            2      122             70             27        0  36.8   \n",
-      "765            5      121             72             23      112  26.2   \n",
-      "766            1      126             60              0        0  30.1   \n",
-      "767            1       93             70             31        0  30.4   \n",
+      "Pregnancies                 0\n",
+      "Glucose                     0\n",
+      "BloodPressure               0\n",
+      "SkinThickness               0\n",
+      "Insulin                     0\n",
+      "BMI                         0\n",
+      "DiabetesPedigreeFunction    0\n",
+      "Age                         0\n",
+      "Outcome                     0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test Null in the dataset\n",
+    "null_counts = df.isnull().sum()\n",
+    "print(null_counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on data description from Kaggle: \\\n",
+    "Pregnancies: To express the Number of pregnancies,\n",
+    "Glucose: To express the Glucose level in blood,\n",
+    "BloodPressure: To express the Blood pressure measurement,\n",
+    "SkinThickness: To express the thickness of the skin,\n",
+    "Insulin: To express the Insulin level in blood,\n",
+    "BMI: To express the Body mass index,\n",
+    "DiabetesPedigreeFunction: To express the Diabetes percentage,\n",
+    "Age: To express the age,\n",
+    "Outcome: To express the final result 1 is Yes and 0 is No.\n",
+    "\n",
+    "It is impossible to be zero Glucose, BloodPressure, SkinThickness, Insulin, BMI, DiabetesPedigreeFunction and Age. So I start with checking 0 in the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 768 entries, 0 to 767\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column                    Non-Null Count  Dtype  \n",
+      "---  ------                    --------------  -----  \n",
+      " 0   Pregnancies               768 non-null    int64  \n",
+      " 1   Glucose                   768 non-null    int64  \n",
+      " 2   BloodPressure             768 non-null    int64  \n",
+      " 3   SkinThickness             768 non-null    int64  \n",
+      " 4   Insulin                   768 non-null    int64  \n",
+      " 5   BMI                       768 non-null    float64\n",
+      " 6   DiabetesPedigreeFunction  768 non-null    float64\n",
+      " 7   Age                       768 non-null    int64  \n",
+      " 8   Outcome                   768 non-null    int64  \n",
+      "dtypes: float64(2), int64(7)\n",
+      "memory usage: 54.1 KB\n",
+      "Number of Pregnancies: 111\n",
+      "Number of Glucose: 5\n",
+      "Number of BloodPressure: 35\n",
+      "Number of SkinThickness: 227\n",
+      "Number of Insulin: 374\n",
+      "Number of BMI: 11\n",
+      "Number of DiabetesPedigreeFunction: 0\n",
+      "Number of Age: 0\n",
+      "Number of Outcome: 500\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()\n",
+    "for column in df:\n",
+    "    zero_count = (df[column] == 0).sum()\n",
+    "    print(f\"Number of {column}: {zero_count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Glucose: 120.89\n",
+      "Number of zero values before replacement: 5\n",
+      "Number of zero values after replacement: 0\n",
+      "count    768.000000\n",
+      "mean     121.681605\n",
+      "std       30.436016\n",
+      "min       44.000000\n",
+      "25%       99.750000\n",
+      "50%      117.000000\n",
+      "75%      140.250000\n",
+      "max      199.000000\n",
+      "Name: Glucose, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "ST_mean = df[\"Glucose\"].mean()\n",
+    "print(f\"Mean Glucose: {ST_mean:.2f}\")\n",
+    "\n",
+    "zero_count = (df[\"Glucose\"] == 0).sum()\n",
+    "print(f\"Number of zero values before replacement: {zero_count}\")\n",
+    "\n",
+    "df[\"Glucose\"] = df[\"Glucose\"].replace(0, ST_mean)\n",
+    "\n",
+    "zero_count_after = (df[\"Glucose\"] == 0).sum()\n",
+    "print(f\"Number of zero values after replacement: {zero_count_after}\")\n",
+    "\n",
+    "print(df[\"Glucose\"].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean BloodPressure: 69.11\n",
+      "Number of zero values before replacement: 35\n",
+      "Number of zero values after replacement: 0\n",
+      "count    768.000000\n",
+      "mean      72.254807\n",
+      "std       12.115932\n",
+      "min       24.000000\n",
+      "25%       64.000000\n",
+      "50%       72.000000\n",
+      "75%       80.000000\n",
+      "max      122.000000\n",
+      "Name: BloodPressure, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "ST_mean = df[\"BloodPressure\"].mean()\n",
+    "print(f\"Mean BloodPressure: {ST_mean:.2f}\")\n",
+    "\n",
+    "zero_count = (df[\"BloodPressure\"] == 0).sum()\n",
+    "print(f\"Number of zero values before replacement: {zero_count}\")\n",
+    "\n",
+    "df[\"BloodPressure\"] = df[\"BloodPressure\"].replace(0, ST_mean)\n",
+    "\n",
+    "zero_count_after = (df[\"BloodPressure\"] == 0).sum()\n",
+    "print(f\"Number of zero values after replacement: {zero_count_after}\")\n",
+    "\n",
+    "print(df[\"BloodPressure\"].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean SkinThickness: 20.54\n",
+      "Number of zero values before replacement: 227\n",
+      "Number of zero values after replacement: 0\n",
+      "count    768.000000\n",
+      "mean      26.606479\n",
+      "std        9.631241\n",
+      "min        7.000000\n",
+      "25%       20.536458\n",
+      "50%       23.000000\n",
+      "75%       32.000000\n",
+      "max       99.000000\n",
+      "Name: SkinThickness, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "ST_mean = df[\"SkinThickness\"].mean()\n",
+    "print(f\"Mean SkinThickness: {ST_mean:.2f}\")\n",
+    "\n",
+    "zero_count = (df[\"SkinThickness\"] == 0).sum()\n",
+    "print(f\"Number of zero values before replacement: {zero_count}\")\n",
+    "\n",
+    "df[\"SkinThickness\"] = df[\"SkinThickness\"].replace(0, ST_mean)\n",
+    "\n",
+    "zero_count_after = (df[\"SkinThickness\"] == 0).sum()\n",
+    "print(f\"Number of zero values after replacement: {zero_count_after}\")\n",
+    "\n",
+    "print(df[\"SkinThickness\"].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Insulin: 79.80\n",
+      "Number of zero values before replacement: 374\n",
+      "Number of zero values after replacement: 0\n",
+      "count    768.000000\n",
+      "mean     118.660163\n",
+      "std       93.080358\n",
+      "min       14.000000\n",
+      "25%       79.799479\n",
+      "50%       79.799479\n",
+      "75%      127.250000\n",
+      "max      846.000000\n",
+      "Name: Insulin, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "ST_mean = df[\"Insulin\"].mean()\n",
+    "print(f\"Mean Insulin: {ST_mean:.2f}\")\n",
+    "\n",
+    "zero_count = (df[\"Insulin\"] == 0).sum()\n",
+    "print(f\"Number of zero values before replacement: {zero_count}\")\n",
+    "\n",
+    "df[\"Insulin\"] = df[\"Insulin\"].replace(0, ST_mean)\n",
+    "\n",
+    "zero_count_after = (df[\"Insulin\"] == 0).sum()\n",
+    "print(f\"Number of zero values after replacement: {zero_count_after}\")\n",
+    "\n",
+    "print(df[\"Insulin\"].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean BMI: 31.99\n",
+      "Number of zero values before replacement: 11\n",
+      "Number of zero values after replacement: 0\n",
+      "count    768.000000\n",
+      "mean      32.450805\n",
+      "std        6.875374\n",
+      "min       18.200000\n",
+      "25%       27.500000\n",
+      "50%       32.000000\n",
+      "75%       36.600000\n",
+      "max       67.100000\n",
+      "Name: BMI, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "ST_mean = df[\"BMI\"].mean()\n",
+    "print(f\"Mean BMI: {ST_mean:.2f}\")\n",
+    "\n",
+    "zero_count = (df[\"BMI\"] == 0).sum()\n",
+    "print(f\"Number of zero values before replacement: {zero_count}\")\n",
+    "\n",
+    "df[\"BMI\"] = df[\"BMI\"].replace(0, ST_mean)\n",
+    "\n",
+    "zero_count_after = (df[\"BMI\"] == 0).sum()\n",
+    "print(f\"Number of zero values after replacement: {zero_count_after}\")\n",
+    "\n",
+    "print(df[\"BMI\"].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Pregnancies  Glucose  BloodPressure  SkinThickness     Insulin   BMI  \\\n",
+      "0              6    148.0           72.0      35.000000   79.799479  33.6   \n",
+      "1              1     85.0           66.0      29.000000   79.799479  26.6   \n",
+      "2              8    183.0           64.0      20.536458   79.799479  23.3   \n",
+      "3              1     89.0           66.0      23.000000   94.000000  28.1   \n",
+      "4              0    137.0           40.0      35.000000  168.000000  43.1   \n",
+      "..           ...      ...            ...            ...         ...   ...   \n",
+      "763           10    101.0           76.0      48.000000  180.000000  32.9   \n",
+      "764            2    122.0           70.0      27.000000   79.799479  36.8   \n",
+      "765            5    121.0           72.0      23.000000  112.000000  26.2   \n",
+      "766            1    126.0           60.0      20.536458   79.799479  30.1   \n",
+      "767            1     93.0           70.0      31.000000   79.799479  30.4   \n",
       "\n",
       "     DiabetesPedigreeFunction  Age  \n",
       "0                       0.627   50  \n",
@@ -276,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +997,7 @@
        "LogisticRegression(random_state=42)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,24 +1018,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.75\n",
+      "Accuracy: 0.77\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.81      0.80      0.81        99\n",
-      "           1       0.65      0.67      0.66        55\n",
+      "           0       0.81      0.84      0.82        99\n",
+      "           1       0.69      0.64      0.66        55\n",
       "\n",
-      "    accuracy                           0.75       154\n",
-      "   macro avg       0.73      0.74      0.73       154\n",
-      "weighted avg       0.76      0.75      0.75       154\n",
+      "    accuracy                           0.77       154\n",
+      "   macro avg       0.75      0.74      0.74       154\n",
+      "weighted avg       0.76      0.77      0.76       154\n",
       "\n"
      ]
     }
@@ -764,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
